[package]
name = "pokemon_ai"
version = "0.1.0"
authors = ["alex wennerberg <alex@alexwennerberg.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "*"
pathfinding = "2.0.4"
mooneye_gb_frontend = {git = "https://github.com/alexwennerberg/mooneye-gb.git", branch="older-build"}
