[package]
name = "pokemon_ai"
version = "0.1.0"
authors = ["alex wennerberg <alex@alexwennerberg.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "*"
pathfinding = "2.0.4"
log = "*"
env_logger ="0.7"
# mooneye_gb_frontend = {git = "https://github.com/alexwennerberg/mooneye-gb.git", branch="older-build"}
# mooneye_gb_core = {git = "https://github.com/alexwennerberg/mooneye-gb.git", branch="older-build"}
mooneye_gb_frontend = {path = "../mooneye-gb"}
mooneye_gb_core = {path = "../mooneye-gb/core"}
